# cog_data

./: README.md  setup.cfg  setup.py
src/cog_data/: _utils.py
src/cogworks_data/: _utils.py  language.py
