[metadata]
name = cogworks_data
version = attr: cogworks_data.__version__
description = Simple functions for downloading and accessing data for CogWorks.
long_description = file: README.md, LICENSE.txt
license = MIT
author=CogWorks Staff
author_email=rsoklaski@gmail.com

[options]
install_requires =
    pooch >= 1.6.0
    typing-extensions >= 4.1.0
python_requires = 
    >=3.7
package_dir=
    =src
packages=find:


[options.packages.find]
where=src
exclude =
    tests
    tests.*
